enter to add new tasks, edit, fixed algorithm in loops

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <header> 
       <h1>My 'To Do' List</h1> 
     </header>
-   <input type="input" id='newTaskText'>
-   <button id=newTask>new Task</button> 
-   
+    <form id='enter'>
+       <input type="input" id='newTaskText'>
+       <button id=newTask>new Task</button> 
+    </form>
    <div id = 'toDoRoot'></div>
 
     <script type="text/javascript" src="index.js"></script>
